!fix register user
